# Logger

./: README.md  setup.cfg  setup.py
Debug/: logger.py
Debug.egg-info/: PKG-INFO  SOURCES.txt
src/PythonDebuggerTools/: logger.py
src/PythonDebuggerTools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PythonDebuggerTools_AakashHaran.egg-info/: PKG-INFO  SOURCES.txt
tests/: DebugTest.py
~/: .pypirc
