[metadata]
name = PythonDebuggerTools
version = 0.0.14
author = Aakash Haran
author_email = aakash.haran01@gmail.com
description = A collection of useful debugging tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Luna-Cake/Logger
project_urls =
    Bug Tracker = https://github.com/Luna-Cake/Logger
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src